# wasmedgeup

./: Cargo.toml  README.md  knope.toml  spec.md
.changeset/: add_verbose_flag_support.md  add_wasmedgeup_list_command.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-rust/: action.yml
.github/linters/: .markdown-lint.yml  .yaml-lint.yml
.github/workflows/: audit_check.yml  ci.yml  prepare_release.yml  release.yml  rust.yml  superlinter.yml
src/: cli.rs  error.rs  fs.rs  lib.rs  main.rs  target.rs
src/api/: mod.rs  releases.rs
src/commands/: install.rs  list.rs  mod.rs  remove.rs
src/commands/plugin/: install.rs  mod.rs  remove.rs  version.rs
tests/: version_test.rs
