[package]
name = "wasmedgeup"
version = "0.1.0"
edition = "2021"
authors = ["hydai <hydai@secondstate.io>"]
description = "An installer for the Wasmedge runtime and plugins."
homepage = "https://github.com/WasmEdge/wasmedgeup"
repository = "https://github.com/WasmEdge/wasmedgeup"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
futures = "0.3.31"
pin-project-lite = "0.2.16"
regex = "1.11.1"
reqwest = "0.12.15"
semver = "1.0.26"
snafu = "0.8.5"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
rstest = "0.25.0"
