[package]
name = "wasmedgeup"
version = "0.1.0"
edition = "2021"
authors = ["hydai <hydai@secondstate.io>"]
description = "An installer for the Wasmedge runtime and plugins."
homepage = "https://github.com/WasmEdge/wasmedgeup"
repository = "https://github.com/WasmEdge/wasmedgeup"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
git2 = { version = "0.20.1", features = ["vendored-libgit2"] }
reqwest = "0.12.15"
semver = "1.0.26"
snafu = "0.8.5"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
rstest = "0.25.0"
