[package]
name = "wasmedgeup"
version = "0.1.0"
edition = "2021"
authors = ["hydai <hydai@secondstate.io>"]
description = "An installer for the Wasmedge runtime and plugins."
homepage = "https://github.com/WasmEdge/wasmedgeup"
repository = "https://github.com/WasmEdge/wasmedgeup"
license = "Apache-2.0"

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.5.36", features = ["derive"] }
dirs = "6.0.0"
git2 = { version = "0.20.1", features = ["vendored-libgit2"] }
indicatif = { version = "0.17.11", features = ["tokio"] }
reqwest = "0.12.15"
semver = "1.0.26"
snafu = "0.8.5"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
walkdir = "2.5.0"

[target.'cfg(unix)'.dependencies]
flate2 = "1.1.1"
tar = "0.4.44"

[target.'cfg(windows)'.dependencies]
zip = "2.6.1"

[dev-dependencies]
rstest = "0.25.0"
